# puredomain

./: .gitignore  README.md  alembic.ini  pyproject.toml
.claude/: settings.local.json
_bmad-output/: bmm-workflow-status.yaml  project-context.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
application/: __init__.py
application/commands/: __init__.py  example_commands.py
application/events/: __init__.py  example_events.py
application/handlers/: __init__.py  example_event_handlers.py  example_handlers.py
application/queries/: __init__.py
common/: __init__.py
common/logging/: __init__.py
domain/common/: __init__.py  base_aggregate.py  base_entity.py  base_event.py  base_repository.py  base_value_object.py  domain_service.py  exceptions.py  specification.py
infrastructure/: __init__.py
infrastructure/behaviors/: __init__.py  exception_behavior.py  transaction_behavior.py  validation_behavior.py
infrastructure/config/: __init__.py
infrastructure/containers/: __init__.py  application.py  bootstrap.py  infrastructure.py
infrastructure/events/: __init__.py  event_bus.py
infrastructure/logging/: __init__.py  handler_behavior.py  logger_factory.py  repository_mixin.py
infrastructure/mediator/: __init__.py  setup.py
infrastructure/persistence/: __init__.py  database_factory.py  unit_of_work.py
interfaces/: __init__.py
interfaces/api/: __init__.py  app.py  dependencies.py  exception_handlers.py
interfaces/cli/: __init__.py
(+23 files in other folders)
