[project]
name = "ddd-framework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "cryptography>=41.0.0",
    "curl-cffi>=0.13.0",
    "dependency-injector>=4.48.2",
    "fastapi>=0.122.0",
    "fastmcp>=2.13.1",
    "loguru>=0.7.3",
    "mediatr>=1.3.2",
    "pydantic-settings>=2.12.0",
    "pyventus>=0.7.2",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
